Added more styling to the authentication section

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -185,10 +185,16 @@
                       </div>
                       <div class="slide">
                         <h4>[Phase] End Game</h4>
-                        <p>The game ends with the defeat of the player who has only 2 pieces</p>
+                        <p>
+                          The game ends with the defeat of the player who has
+                          only 2 pieces
+                        </p>
                         <p>It ends in a draw if no valid move can be made</p>
                         <p>OR</p>
-                        <p>Both players have 3 pieces and after 10 moves, there is no winner</p>
+                        <p>
+                          Both players have 3 pieces and after 10 moves, there
+                          is no winner
+                        </p>
                       </div>
                     </div>
                     <div class="slider-dots">
@@ -201,7 +207,7 @@
                     </div>
                   </div>
                 </div>
-                
+              </div>
               <button id="next-topic" class="arrow right-arrow"></button>
               <!-- Right Arrow -->
             </div>
@@ -314,17 +320,16 @@
               <h2 class="logo"><i class="bx bxl-firebase"></i>Authenticaton</h2>
 
               <div class="text-sci">
-                <h2>Welcome!<br /><span>To Our New Website.</span></h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Officiis, suscipit
-                </p>
+                <h2>Welcome!<br /><span>To Nine Men's Morris.</span></h2>
+                <p>Project Developed on the Web Technologies Course.</p>
 
                 <div class="social-icons">
-                  <a href="#"><i class="bx bxl-linkedin"></i></a>
-                  <a href="#"><i class="bx bxl-facebook"></i></a>
-                  <a href="#"><i class="bx bxl-instagram"></i></a>
-                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                  <a><i class="bx bxl-html5"></i></a>
+                  <a><i class="bx bxl-css3"></i></a>
+                  <a><i class="bx bxl-javascript"></i></a>
+                  <a><i class="bx bxs-server"></i></a>
+                  <a><i class="bx bxs-user"></i></a>
+                  <a><i class="bx bxs-joystick-alt"></i></a>
                 </div>
               </div>
             </div>
@@ -335,9 +340,9 @@
                   <h2>Sign In</h2>
 
                   <div class="input-box">
-                    <span class="icon"><i class="bx bxs-envelope"></i></span>
-                    <input type="email" required />
-                    <label>Email</label>
+                    <span class="icon"><i class="bx bxs-user"></i></span>
+                    <input type="text" required />
+                    <label>Username</label>
                   </div>
 
                   <div class="input-box">
@@ -369,7 +374,7 @@
                   <div class="input-box">
                     <span class="icon"><i class="bx bxs-user"></i></span>
                     <input type="text" required />
-                    <label>Name</label>
+                    <label>Username</label>
                   </div>
 
                   <div class="input-box">
@@ -385,9 +390,9 @@
                   </div>
 
                   <div class="remember-forgot">
-                    <label>
-                      <input type="checkbox" />
-                      I agree to the terms & conditions</label
+                    <label
+                      ><input type="checkbox" /> I agree to the terms &
+                      conditions</label
                     >
                   </div>
 
