Fixed some things

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -342,13 +342,23 @@
 
                   <div class="input-box">
                     <span class="icon"><i class="bx bxs-user"></i></span>
-                    <input type="text" id="loginUsername" required />
+                    <input
+                      type="text"
+                      id="loginUsername"
+                      autocomplete="off"
+                      required
+                    />
                     <label>Username</label>
                   </div>
 
                   <div class="input-box">
                     <span class="icon"><i class="bx bxs-lock-alt"></i></span>
-                    <input type="password" id="loginPassword" required />
+                    <input
+                      type="password"
+                      id="loginPassword"
+                      autocomplete="off"
+                      required
+                    />
                     <label>Password</label>
                   </div>
 
@@ -377,19 +387,34 @@
 
                   <div class="input-box">
                     <span class="icon"><i class="bx bxs-user"></i></span>
-                    <input type="text" id="registerUsername" required />
+                    <input
+                      type="text"
+                      id="registerUsername"
+                      autocomplete="off"
+                      required
+                    />
                     <label>Username</label>
                   </div>
 
                   <div class="input-box">
                     <span class="icon"><i class="bx bxs-envelope"></i></span>
-                    <input type="email" id="registerEmail" required />
+                    <input
+                      type="email"
+                      id="registerEmail"
+                      autocomplete="off"
+                      required
+                    />
                     <label>Email</label>
                   </div>
 
                   <div class="input-box">
                     <span class="icon"><i class="bx bxs-lock-alt"></i></span>
-                    <input type="password" id="registerPassword" required />
+                    <input
+                      type="password"
+                      id="registerPassword"
+                      autocomplete="off"
+                      required
+                    />
                     <label>Password</label>
                   </div>
 
