--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -440,12 +440,14 @@
 
               <!-- Account Details Section -->
               <div class="form-box account">
-                <h2>Account Details</h2>
-                <p>Username: <span id="accountUsername"></span></p>
-                <p>Email: <span id="accountEmail"></span></p>
-                <button type="submit" id="logoutButton" class="btn">
-                  Logout
-                </button>
+                <div class="account-box">
+                  <h2>Account Details</h2>
+                  <p>Username: <span id="accountUsername"></span></p>
+                  <p>Email: <span id="accountEmail"></span></p>
+                  <button type="submit" id="logoutButton" class="btn">
+                    Logout
+                  </button>
+                </div>
               </div>
             </div>
           </div>
