made some minor changes

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -41,9 +41,7 @@
             <button class="nav-btn" data-target="section4">Leaderboard</button>
           </li>
           <li>
-            <button class="nav-btn" data-target="section5">
-              Authentication
-            </button>
+            <button class="nav-btn" data-target="section5">Sign In</button>
           </li>
         </ul>
       </nav>
