--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -219,24 +219,29 @@
 
         <!-- Game Board -->
         <section id="section2" class="content">
-          <div class="game-phase">
-            <h3 id="current-phase">Placing Phase</h3>
+          <div id="player1-info" class="player1-info">
+            <!-- Player 1 - Information -->
+            <h3 id="player1-name">Player 1</h3>
+            <!-- <p id="player1-pieces">Pieces: 9</p> -->
+            <!-- <div id="player1-pieces-container" class="pieces-container"></div> -->
           </div>
 
-          <div id="player-game-board" class="player-game-board">
-            <div id="player1-info" class="player-info">
-              <h3 id="player1-name">Player 1</h3>
-              <!-- <p id="player1-pieces">Pieces: 9</p> -->
-              <!-- <div id="player1-pieces-container" class="pieces-container"></div> -->
+          <!-- Game Board -->
+          <div id="game-board" class="game-board">
+            <!-- Current Game Phase -->
+            <div class="game-phase">
+              <h3 id="current-phase">Placing Phase</h3>
             </div>
 
+            <!-- Game Board Configuration -->
             <div id="board" class="board-container"></div>
+          </div>
 
-            <div id="player2-info" class="player-info">
-              <h3 id="player2-name">Player 2</h3>
-              <!-- <p id="player2-pieces">Pieces: 9</p> -->
-              <!-- <div id="player2-pieces-container" class="pieces-container"></div> -->
-            </div>
+          <!-- Player 2 - Information -->
+          <div id="player2-info" class="player2-info">
+            <h3 id="player2-name">Player 2</h3>
+            <!-- <p id="player2-pieces">Pieces: 9</p> -->
+            <!-- <div id="player2-pieces-container" class="pieces-container"></div> -->
           </div>
         </section>
 
@@ -254,29 +259,6 @@
                   <option value="4">4 Squares</option>
                 </select>
               </div>
-
-              <!-- <div class="select-group">
-                <div class="select-menu">
-                  <div class="select-btn" id="select-btn">
-                    <span id="text">Dropdown Select</span>
-                    <ion-icon
-                      name="chevron-down-outline"
-                      class="icon-arrow"
-                    ></ion-icon>
-                  </div>
-
-                  <ul class="list">
-                    <li class="option" style="--i: 5">
-                      <ion-icon name="logo-html5" class="icon"></ion-icon>
-                      <span class="option-text">HTML</span>
-                    </li>
-                    <li class="option" style="--i: 4">
-                      <ion-icon name="logo-html5" class="icon"></ion-icon>
-                      <span class="option-text">CSS</span>
-                    </li>
-                  </ul>
-                </div>
-              </div> -->
 
               <div class="select-group">
                 <label class="label-config" for="opponent">Game Mode</label>
