Fixed the management of the active content sections - It appears to not have problems now

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -27,21 +27,25 @@
         </div>
         <ul>
           <li>
-            <button class="nav-btn" data-target="section1">Rules</button>
+            <button class="nav-btn" data-target="rules">Rules</button>
           </li>
           <li>
-            <button class="nav-btn" data-target="section2">Game Board</button>
+            <button class="nav-btn" data-target="game">Game Board</button>
           </li>
           <li>
-            <button class="nav-btn" data-target="section3">
+            <button class="nav-btn" data-target="configuration">
               Configuration
             </button>
           </li>
           <li>
-            <button class="nav-btn" data-target="section4">Leaderboard</button>
+            <button class="nav-btn" data-target="leaderboard">
+              Leaderboard
+            </button>
           </li>
           <li>
-            <button class="nav-btn" data-target="section5">Sign In</button>
+            <button class="nav-btn" data-target="authentication">
+              Sign In
+            </button>
           </li>
         </ul>
       </nav>
@@ -50,7 +54,7 @@
     <main>
       <div class="content-box">
         <!-- Rules -->
-        <section id="section1" class="content">
+        <section id="rules" class="content">
           <div class="rules">
             <!-- Main Topic Slider -->
             <div class="main-slider-container">
@@ -217,8 +221,8 @@
           </div>
         </section>
 
-        <!-- Game Board -->
-        <section id="section2" class="content">
+        <!-- Game -->
+        <section id="game" class="content">
           <div id="player1-info" class="player1-info">
             <!-- Player 1 - Information -->
             <h3 id="player1-name">Player 1</h3>
@@ -246,7 +250,7 @@
         </section>
 
         <!-- Configuration -->
-        <section id="section3" class="content">
+        <section id="configuration" class="content">
           <div class="config-section">
             <h2>Configuration</h2>
 
@@ -299,7 +303,7 @@
         </section>
 
         <!-- Leaderboard -->
-        <section id="section4" class="content">
+        <section id="leaderboard" class="content">
           <div class="leaderboard-container">
             <h2>Leaderboard</h2>
             <table>
@@ -342,9 +346,9 @@
         </section>
 
         <!-- Authenticaton -->
-        <section id="section5" class="content active">
-          <div class="containerAuthentication">
-            <div class="contentAuthentication">
+        <section id="authentication" class="content active">
+          <div class="container-authentication">
+            <div class="content-authentication">
               <h2 class="logo"><i class="bx bxl-firebase"></i>Authenticaton</h2>
 
               <div class="text-sci">
