Improved UI, game logic and some other fancy stuff

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -230,11 +230,15 @@
             <!-- <div id="player1-pieces-container" class="pieces-container"></div> -->
           </div>
 
+          <div class="player1-current-phase">
+            <h3 id="player1-phase">Placing Phase</h3>
+          </div>
+
           <!-- Game Board -->
           <div id="game-board" class="game-board">
             <!-- Current Game Phase -->
-            <div class="game-phase">
-              <h3 id="current-phase">Placing Phase</h3>
+            <div class="game-winner">
+              <h3 id="current-winner">None</h3>
             </div>
 
             <!-- Game Board Configuration -->
@@ -246,6 +250,9 @@
             <h3 id="player2-name">Player 2</h3>
             <!-- <p id="player2-pieces">Pieces: 9</p> -->
             <!-- <div id="player2-pieces-container" class="pieces-container"></div> -->
+          </div>
+          <div class="player2-current-phase">
+            <h3 id="player2-phase">Placing Phase</h3>
           </div>
         </section>
 
