Added containers to display the available pieces

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -226,13 +226,15 @@
           <div id="player1-info" class="player1-info">
             <!-- Player 1 - Information -->
             <h3 id="player1-name">Player 1</h3>
-            <!-- <p id="player1-pieces">Pieces: 9</p> -->
-            <!-- <div id="player1-pieces-container" class="pieces-container"></div> -->
           </div>
 
+          <!-- Player 1 - Current Phase -->
           <div class="player1-current-phase">
             <h3 id="player1-phase">Placing Phase</h3>
           </div>
+
+          <!-- Player 1 - Current Placeable Pieces -->
+          <div id="player1-pieces" class="player1-pieces-container"></div>
 
           <!-- Game Board -->
           <div id="game-board" class="game-board">
@@ -248,12 +250,15 @@
           <!-- Player 2 - Information -->
           <div id="player2-info" class="player2-info">
             <h3 id="player2-name">Player 2</h3>
-            <!-- <p id="player2-pieces">Pieces: 9</p> -->
-            <!-- <div id="player2-pieces-container" class="pieces-container"></div> -->
           </div>
+
+          <!-- Player 2 - Current Phase -->
           <div class="player2-current-phase">
             <h3 id="player2-phase">Placing Phase</h3>
           </div>
+
+          <!-- Player 2 - Current Placeable Pieces -->
+          <div id="player2-pieces" class="player2-pieces-container"></div>
         </section>
 
         <!-- Configuration -->
