Improved the centering of the board elements

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -223,42 +223,51 @@
 
         <!-- Game -->
         <section id="game" class="content">
-          <div id="player1-info" class="player1-info">
-            <!-- Player 1 - Information -->
-            <h3 id="player1-name">Player 1</h3>
-          </div>
-
-          <!-- Player 1 - Current Phase -->
-          <div class="player1-current-phase">
-            <h3 id="player1-phase">Placing Phase</h3>
-          </div>
-
-          <!-- Player 1 - Current Placeable Pieces -->
-          <div id="player1-pieces" class="player1-pieces-container"></div>
-
           <!-- Game Board -->
-          <div id="game-board" class="game-board">
-            <!-- Current Game Phase -->
-            <div class="game-winner">
-              <h3 id="current-winner">None</h3>
+          <div id="game-layout" class="game-layout">
+            <!-- Player 1 -->
+            <div class="player1">
+              <div id="player1-info" class="player1-info">
+                <!-- Player 1 - Information -->
+                <h3 id="player1-name">Player 1</h3>
+              </div>
+
+              <!-- Player 1 - Current Phase -->
+              <div class="player1-current-phase">
+                <h3 id="player1-phase">Placing Phase</h3>
+              </div>
+
+              <!-- Player 1 - Current Placeable Pieces -->
+              <div id="player1-pieces" class="player1-pieces-container"></div>
             </div>
 
-            <!-- Game Board Configuration -->
-            <div id="board" class="board-container"></div>
-          </div>
+            <!-- Game Board -->
+            <div class="game-board">
+              <!-- Current Game Phase -->
+              <div class="game-winner">
+                <h3 id="current-winner">None</h3>
+              </div>
 
-          <!-- Player 2 - Information -->
-          <div id="player2-info" class="player2-info">
-            <h3 id="player2-name">Player 2</h3>
-          </div>
+              <!-- Game Board Configuration -->
+              <div id="board" class="board-container"></div>
+            </div>
 
-          <!-- Player 2 - Current Phase -->
-          <div class="player2-current-phase">
-            <h3 id="player2-phase">Placing Phase</h3>
-          </div>
+            <!-- Player 2 -->
+            <div class="player2">
+              <!-- Player 2 - Information -->
+              <div id="player2-info" class="player2-info">
+                <h3 id="player2-name">Player 2</h3>
+              </div>
 
-          <!-- Player 2 - Current Placeable Pieces -->
-          <div id="player2-pieces" class="player2-pieces-container"></div>
+              <!-- Player 2 - Current Phase -->
+              <div class="player2-current-phase">
+                <h3 id="player2-phase">Placing Phase</h3>
+              </div>
+
+              <!-- Player 2 - Current Placeable Pieces -->
+              <div id="player2-pieces" class="player2-pieces-container"></div>
+            </div>
+          </div>
         </section>
 
         <!-- Configuration -->
