Added a container to display messages for each player

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -237,6 +237,11 @@
                 <h3 id="player1-phase">Placing Phase</h3>
               </div>
 
+              <!-- Player 1 - Messages [Used to inform the player regarding his moves] -->
+              <div class="player1-messages">
+                <h3 id="player1-notes">Place a Piece</h3>
+              </div>
+
               <!-- Player 1 - Current Placeable Pieces -->
               <div id="player1-pieces" class="player1-pieces-container"></div>
             </div>
@@ -262,6 +267,11 @@
               <!-- Player 2 - Current Phase -->
               <div class="player2-current-phase">
                 <h3 id="player2-phase">Placing Phase</h3>
+              </div>
+
+              <!-- Player 2 - Messages [Used to inform the player regarding his moves] -->
+              <div class="player2-messages">
+                <h3 id="player2-notes">Place a Piece</h3>
               </div>
 
               <!-- Player 2 - Current Placeable Pieces -->
