--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -507,6 +507,7 @@
                   <h2>Account Details</h2>
                   <p>Username: <span id="accountUsername"></span></p>
                   <p>Email: <span id="accountEmail"></span></p>
+                  <p>Password: <span id="accountPassword"></span></p>
                   <button type="submit" id="logoutButton" class="btn">
                     Logout
                   </button>
