Improved the rules section with custom images

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -80,20 +80,30 @@
                           the sides
                         </p>
                         <p>The spots are marked with a circle</p>
-                        <img src="./static/images/logo.png" />
+                        <div class="logo-basic-info">
+                          <img src="./static/images/logo.png" />
+                        </div>
                       </div>
                       <div class="slide">
                         <h4>Other Boards</h4>
-                        <p>Another number of squares is possible</p>
-                        <p>The number of spots per square is always 8</p>
+                        <p>Boards can have a different number of squares</p>
+                        <p>Aside the typical 2 squared board</p>
+                        <p>
+                          However, the number of spots per square is always 8
+                        </p>
                         <p>
                           The connections between squares are in the middle of
                           the sides
                         </p>
+                        <p>In the examples bellow,</p>
                         <p>
-                          In the example above, the board has only 2 squares
+                          the boards have only 2, 3 and 4 squares, respectively
                         </p>
-                        <p>But it could have more than 3, like 4 or 5</p>
+                        <div class="board-size-showcase">
+                          <img src="./static/images/2SidedBoard.png" />
+                          <img src="./static/images/3SidedBoard.png" />
+                          <img src="./static/images/4SidedBoard.png" />
+                        </div>
                       </div>
                       <div class="slide">
                         <h4>Pieces</h4>
@@ -109,6 +119,11 @@
                           All pieces are always visible, on the board or off the
                           board
                         </p>
+                        <div class="pieces-showcase">
+                          <img src="./static/images/bluePieces.png" />
+                          <img src="./static/images/initialLayout.png" />
+                          <img src="./static/images/redPieces.png" />
+                        </div>
                         <p>On the board, the pieces are placed on the spots</p>
                       </div>
                       <div class="slide">
@@ -120,9 +135,13 @@
                         <p>
                           In vertical or horizontal lines, never in diagonals
                         </p>
-                        <p>The pieces on the board above are part of mills</p>
-                        <p>Except for the ones in the bottom-right corners</p>
-                        <img src="./static/images/logo.png" />
+                        <p>
+                          The highlighted blue pieces on the board bellow are
+                          part of a mill
+                        </p>
+                        <div class="mill-showcase">
+                          <img src="./static/images/blueMill.png" />
+                        </div>
                       </div>
                     </div>
                     <div class="slider-dots">
@@ -142,7 +161,10 @@
                       <div class="slide active">
                         <h4>Initial Layout</h4>
                         <p>Players choose a color and decide who plays first</p>
-                        <p>Initially, the board is empty</p>
+                        <p>Initially, the board is empty:</p>
+                        <div class="initial-board-layout">
+                          <img src="./static/images/initialLayout.png" />
+                        </div>
                         <p>The game has 2 phases:</p>
                         <p>Phase 1 - Drop the pieces (drop)</p>
                         <p>Phase 2 - Move the pieces (move)</p>
@@ -155,6 +177,9 @@
                         </p>
                         <p>Mills can be created (but it is not advantageous)</p>
                         <p>When all pieces are placed, this phase ends</p>
+                        <div class="place-pieces-showcase">
+                          <img src="./static/images/placePiecesPhase.png" />
+                        </div>
                       </div>
                       <div class="slide">
                         <h4>[Phase] Move Pieces</h4>
@@ -168,6 +193,9 @@
                           Spots must be connected by a vertical or horizontal
                           line
                         </p>
+                        <div class="move-pieces-showcase">
+                          <img src="./static/images/movePiecesPhase.png" />
+                        </div>
                       </div>
                       <div class="slide">
                         <h4>[Phase] Capture Pieces</h4>
@@ -189,6 +217,9 @@
                         <p>
                           They are not restricted to moving to adjacent spots
                         </p>
+                        <div class="fly-pieces-showcase">
+                          <img src="./static/images/flyingPiecesPhase.png" />
+                        </div>
                       </div>
                       <div class="slide">
                         <h4>[Phase] End Game</h4>
