Completed images showcasin in the rules section

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -209,6 +209,9 @@
                           move
                         </p>
                         <p>And form a mill again on the next move</p>
+                        <div class="capture-pieces-showcase">
+                          <img src="./static/images/capturePieces.png" />
+                        </div>
                       </div>
                       <div class="slide">
                         <h4>[Phase] Open Moves</h4>
@@ -233,6 +236,9 @@
                           Both players have 3 pieces and after 10 moves, there
                           is no winner
                         </p>
+                        <div class="end-game-showcase">
+                          <img src="./static/images/EndGame.png" />
+                        </div>
                       </div>
                     </div>
                     <div class="slider-dots">
