Created give up btns without any functionality - just styling

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -281,6 +281,9 @@
 
               <!-- Player 1 - Current Placeable Pieces -->
               <div id="player1-pieces" class="player1-pieces-container"></div>
+
+              <!-- Player 1 - Give Up Button -->
+              <button class="player1-give-up-btn">GIVE UP</button>
             </div>
 
             <!-- Game Board -->
@@ -313,6 +316,9 @@
 
               <!-- Player 2 - Current Placeable Pieces -->
               <div id="player2-pieces" class="player2-pieces-container"></div>
+
+              <!-- Player 2 - Give Up Button -->
+              <button class="player2-give-up-btn">GIVE UP</button>
             </div>
           </div>
         </section>
