Added more styling

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -279,8 +279,14 @@
                 <h3 id="player1-notes">Place a Piece</h3>
               </div>
 
+              <!-- Separatory Line - Player 1 -->
+              <div class="top-separatory-line-player1"></div>
+
               <!-- Player 1 - Current Placeable Pieces -->
               <div id="player1-pieces" class="player1-pieces-container"></div>
+
+              <!-- Separatory Line - Player 1 -->
+              <div class="bottom-separatory-line-player1"></div>
 
               <!-- Player 1 - Give Up Button -->
               <button class="player1-give-up-btn">GIVE UP</button>
@@ -314,8 +320,14 @@
                 <h3 id="player2-notes">Place a Piece</h3>
               </div>
 
+              <!-- Separatory Line - Player 2 -->
+              <div class="top-separatory-line-player2"></div>
+
               <!-- Player 2 - Current Placeable Pieces -->
               <div id="player2-pieces" class="player2-pieces-container"></div>
+
+              <!-- Separatory Line - Player 2 -->
+              <div class="bottom-separatory-line-player2"></div>
 
               <!-- Player 2 - Give Up Button -->
               <button class="player2-give-up-btn">GIVE UP</button>
