Implemented the functionality of the give up buttons and fixed some styling

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -289,7 +289,9 @@
               <div class="bottom-separatory-line-player1"></div>
 
               <!-- Player 1 - Give Up Button -->
-              <button class="player1-give-up-btn">GIVE UP</button>
+              <button class="player1-give-up-btn">
+                <div class="give-up-text">GIVE UP</div>
+              </button>
             </div>
 
             <!-- Game Board -->
@@ -330,7 +332,9 @@
               <div class="bottom-separatory-line-player2"></div>
 
               <!-- Player 2 - Give Up Button -->
-              <button class="player2-give-up-btn">GIVE UP</button>
+              <button class="player2-give-up-btn">
+                <div class="give-up-text">GIVE UP</div>
+              </button>
             </div>
           </div>
         </section>
