sometimes my genious scares me

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -580,6 +580,8 @@
     <script src="static/js/configuration.js"></script>
     <script src="static/js/leaderboard.js"></script>
     <script src="static/js/authentication.js"></script>
+    <script src="static/js/ai.js"></script>
+    <script src="static/js/heuristics.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
