fix minimax for single action + change player2 name when AI + AI can do first move

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -372,16 +372,16 @@
                   name="first-player"
                 >
                   <option value="1">Player1</option>
-                  <option value="2">AI</option>
+                  <option value="2">Player2</option>
                 </select>
               </div>
 
               <div class="select-group">
                 <label class="label-config" for="ai-level">AI Dificulty</label>
                 <select id="ai-level" class="select-config" name="ai-level">
-                  <option value="1">Easy</option>
-                  <option value="2">Medium</option>
-                  <option value="3">Hard</option>
+                  <option value="2">Easy</option>
+                  <option value="3">Medium</option>
+                  <option value="5">Hard</option>
                 </select>
               </div>
 
