Implemented a way to show the username in the navigation bar when he is authenticated

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -43,7 +43,11 @@
             </button>
           </li>
           <li>
-            <button class="nav-btn" data-target="authentication">
+            <button
+              id="nav-btn-authentication"
+              class="nav-btn"
+              data-target="authentication"
+            >
               Sign In
             </button>
           </li>
@@ -443,7 +447,7 @@
 
               <div class="text-sci">
                 <h2>Welcome!<br /><span>To Nine Men's Morris.</span></h2>
-                <p>Project Developed on the Web Technologies Course.</p>
+                <p>Project Developed @ the Web Technologies Course.</p>
 
                 <div class="social-icons">
                   <a><i class="bx bxl-html5"></i></a>
