--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -27,18 +27,18 @@
         </div>
         <ul>
           <li>
-            <button class="nav-btn" data-target="rules">Rules</button>
+            <button class="nav-btn" data-target="rules" style="display: none">Rules</button>
           </li>
           <li>
-            <button class="nav-btn" data-target="game">Game Board</button>
+            <button class="nav-btn" data-target="game" style="display: none">Game Board</button>
           </li>
           <li>
-            <button class="nav-btn" data-target="configuration">
+            <button class="nav-btn" data-target="configuration" style="display: none">
               Configuration
             </button>
           </li>
           <li>
-            <button class="nav-btn" data-target="leaderboard">
+            <button class="nav-btn" data-target="leaderboard" style="display: none">
               Leaderboard
             </button>
           </li>
