--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -401,8 +401,12 @@
           <div class="leaderboard-container">
             <div class="leaderboard-name"><h2>Leaderboard</h2></div>
             <div class="leaderboard-modes">
-              <button class="leaderboard-btn">Single-Player</button>
-              <button class="leaderboard-btn">Multi-Player</button>
+              <button id="single-player-btn" class="leaderboard-btn">
+                Single-Player
+              </button>
+              <button id="multi-player-btn" class="leaderboard-btn">
+                Multi-Player
+              </button>
             </div>
             <div class="leaderboard-singleplayer hidden">
               <table>
