--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -412,26 +412,31 @@
               <table>
                 <thead>
                   <tr>
-                    <th>Rank</th>
-                    <th>Username</th>
-                    <th>Score</th>
+                    <th>Board Configuration [Number of Squares]</th>
+                    <th>AI Level [Depth Search]</th>
+                    <th>Wins</th>
+                    <th>Defeats</th>
                   </tr>
                 </thead>
+                <!-- SAMPLE DATA -->
                 <tbody>
                   <tr>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>0</td>
                     <td>1</td>
-                    <td>John</td>
-                    <td>100</td>
                   </tr>
                   <tr>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>0</td>
                     <td>1</td>
-                    <td>John</td>
-                    <td>100</td>
                   </tr>
                   <tr>
+                    <td>4</td>
+                    <td>3</td>
+                    <td>0</td>
                     <td>1</td>
-                    <td>John</td>
-                    <td>100</td>
                   </tr>
                 </tbody>
               </table>
